--- a/format/hyperref.tex
+++ b/format/hyperref.tex
@@ -1,3 +1,5 @@
+\usepackage{hyperref}
+
 \urlstyle{same}  % don't use monospace font for urls
 \hypersetup{breaklinks = true,
             bookmarks = true,
@@ -7,4 +9,5 @@
             citecolor = blue,
             urlcolor = blue,
             linkcolor = magenta,
-            pdfborder = {0 0 0}}
+            pdfborder = {0 0 0}
+}
